Cambio de clases; Creacion de las nuevas clases HuffmanTree y HuffmanNode.